--- a/apps/web/src/App.css
+++ b/apps/web/src/App.css
@@ -36,3 +36,38 @@
     transform: rotate(360deg);
   }
 }
+
+
+/**
+  Home
+*/
+.rainbow-text {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  font-family: sans-serif;
+  font-weight: 400;
+  background: linear-gradient(to right, #ef5350, #f48fb1, #7e57c2, #2196f3, #26c6da, #43a047, #eeff41, #f9a825, #ff5722);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 5.25rem;
+  line-height: 5.5rem;
+  font-family: Gilroy-Light,sans-serif;
+}
+
+.header-2 {
+  font-size: 3.25rem;
+  line-height: 3.5rem;
+}
+
+.leading-text {
+  padding-top: 2rem;
+  background-color: rgba(255,255,255,.7);
+  border-radius: 0.25rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  font-family: Gilroy-Bold,sans-serif;
+  color: rgb(95, 96, 101)
+}
+
