--- a/apps/web/src/App.css
+++ b/apps/web/src/App.css
@@ -37,6 +37,18 @@
   }
 }
 
+html, body {
+  margin:0;
+  padding: 0;
+  height: 100%;
+}
+
+#root{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 
 /**
   Home
